# ElectrodeGenerator

./: .gitignore  LICENSE  README.md  build.bat  plan.md  pyproject.toml  requirements.txt
docs/: implementation_plan.md  user_guide.md
src/: InputValidator.py  dxf_exporter.py  femm_exporter.py  gui.py  main.py  profiles.py  version.py
src/core/: __init__.py  assembly.py  contour.py  optimizer.py  profiles.py  validation.py
src/exporters/: __init__.py  csv_exporter.py  dxf_exporter.py  femm_exporter.py  png_exporter.py
src/gui/: __init__.py  app.py
src/gui/dialogs/: _param_selector.py  dxf_wizard.py  femm_wizard.py  help_dialog.py  optimize_wizard.py  sweep_wizard.py
src/simulation/: __init__.py  femm_model.py  femm_simulator.py
tests/: test_all_profiles_optim.py  test_ernst_optim.py  test_optimize_wizard.py  test_optimizer.py
